--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ position: fixed;
       
   }
   a:link{color : white}
-  a:active{color:violet}
+  a:active{color:yellow}
   
 
   div{position :relative }
